[package]
name = "vss-map"
description = "Glue between decoded vehicle signals (dbc-rs and friends) and VSS paths"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/vss-map"
homepage = "https://sigmatactical.org"
rust-version = "1.97.0"
publish = false

[features]
default = ["yaml", "dbc"]
# Load a VssMap from the schemas/can frame-map YAML documents.
yaml = ["dep:serde", "dep:serde_yaml_ng"]
# SignalReading impl + frame translator for dbc-rs decode output.
dbc = ["dep:dbc-rs"]
# VssValue → serde_json::Value interop (telemetry snapshots).
json = ["dep:serde_json"]

[dependencies]
dbc-rs = { version = "0.10.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
serde_yaml_ng = { version = "0.10.0", optional = true }

[dev-dependencies]
serde_json = "1.0.150"
